Fixed extra margin between profile and cta

--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,7 @@ img {
 
 #product-summary,
 #product-faqs {
-  margin: 2rem 0;
+  margin-top: 2rem;
   padding: 2rem;
 }
 
